--- a/SmartMenu.Services.ProductAPI/appsettings.json
+++ b/SmartMenu.Services.ProductAPI/appsettings.json
@@ -7,12 +7,12 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=LAPTOP-ROMAN;Database=SmartMenuProduct;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=LAPTOP-ROMAN;Database=ElectronProduct;Trusted_Connection=True;TrustServerCertificate=True"
   },
   "ApiSettings": {
     "Secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET",
-    "Issuer": "smartmenu-auth-api",
-    "Audience": "smartmenu-client"
+    "Issuer": "electron-auth-api",
+    "Audience": "electron-client"
   },
   "ServiceUrls": {
     "ProductAPI": "https://localhost:7000"
