updated authAPI for manager

--- a/SmartMenu.Services.AuthAPI/appsettings.json
+++ b/SmartMenu.Services.AuthAPI/appsettings.json
@@ -7,14 +7,17 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=LAPTOP-ROMAN;Database=SmartMenuAuth;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=LAPTOP-ROMAN;Database=ElectronAuth;Trusted_Connection=True;TrustServerCertificate=True"
   },
   "ApiSettings": {
     "JwtOptions": {
       "Secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET",
-      "Issuer": "smartmenu-auth-api",
-      "Audience": "smartmenu-client"
+      "Issuer": "electron-auth-api",
+      "Audience": "electron-client"
     }
+  },
+  "ServiceUrls": {
+    "ProductAPI": "https://localhost:7000"
   },
   "TopicAndQueueNames": {
     "RegisterUserQueue": "registeruser"
