--- a/SmartMenu.Services.AuthAPI/SmartMenu.Services.AuthAPI.csproj
+++ b/SmartMenu.Services.AuthAPI/SmartMenu.Services.AuthAPI.csproj
@@ -21,6 +21,10 @@
 	  <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 
 
 </Project>
