--- a/SmartMenu.Services.ShoppingCartAPI/SmartMenu.Services.ShoppingCartAPI.csproj
+++ b/SmartMenu.Services.ShoppingCartAPI/SmartMenu.Services.ShoppingCartAPI.csproj
@@ -22,5 +22,9 @@
 	  <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.2.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 
 </Project>
