--- a/SmartMenu.Services.ShoppingCartAPI/appsettings.json
+++ b/SmartMenu.Services.ShoppingCartAPI/appsettings.json
@@ -7,16 +7,15 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=LAPTOP-ROMAN;Database=SmartMenuShoppingCart;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=LAPTOP-ROMAN;Database=ElectronShoppingCart;Trusted_Connection=True;TrustServerCertificate=True"
   },
   "ApiSettings": {
     "Secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET",
-    "Issuer": "smartmenu-auth-api",
-    "Audience": "smartmenu-client"
+    "Issuer": "electron-auth-api",
+    "Audience": "electron-client"
   },
   "ServiceUrls": {
-    "ProductAPI": "https://localhost:7000",
-    "CouponAPI": "https://localhost:7001"
+    "ProductAPI": "https://localhost:7000"
   },
   "TopicAndQueueNames": {
     "EmailShoppingCartQueue": "emailshoppingcart"
