--- a/SmartMenu.Services.AuthAPI/appsettings.json
+++ b/SmartMenu.Services.AuthAPI/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=LAPTOP-ROMAN;Database=ElectronAuth;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=Server=(LocalDb)\\MSSQLLocalDB;Database=ElectronAuth;Trusted_Connection=True;TrustServerCertificate=True"
   },
   "ApiSettings": {
     "JwtOptions": {
