--- a/SmartMenu.Services.ProductAPI/appsettings.json
+++ b/SmartMenu.Services.ProductAPI/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=LAPTOP-ROMAN;Database=ElectronProduct;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=Server=(LocalDb)\\MSSQLLocalDB;Database=ElectronProduct;Trusted_Connection=True;TrustServerCertificate=True"
   },
   "ApiSettings": {
     "Secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET",
