--- a/SmartMenu.Services.OrderAPI/appsettings.json
+++ b/SmartMenu.Services.OrderAPI/appsettings.json
@@ -15,7 +15,8 @@
     "Audience": "electron-client"
   },
   "ServiceUrls": {
-    "ProductAPI": "https://localhost:7000"
+    "ProductAPI": "https://localhost:7000",
+    "AuthAPI": "https://localhost:7002"
   },
   "TopicAndQueueNames": {
     "OrderCreatedTopic": "OrderCreated"
